[AI Fix] (a11y ADA compliance): set post-link text color to #757575 for WCAG contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -247,6 +247,7 @@
 .post-link {
   display: block;
   @include relative-font-size(1.5);
+  color: #757575;
 }
 
 
